--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
     hikari:
-      #jdbc-url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+      jdbc-url: jdbc:h2:mem://localhost/~/portfolio1;MODE=MYSQL
     url: jdbc:h2:tcp://localhost/~/portfolio1
     username: sa
     password:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         #dialect: org.hibernate.dialect.MySQL57Dialect
