1107 마리아 DB 연동 완료 테스트 성공

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,10 @@ server.port=8090
 spring.profiles.include = oauth
 spring.session.store-type=jdbc
 spring.h2.console.enabled=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:portfolio1;MODE=MYSQL
+spring.datasource.hikari.username=sa
 
 #Test OAuth
 
