--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8090
 spring.profiles.include = oauth
 spring.session.store-type=jdbc
 spring.h2.console.enabled=true
+
+spring.profiles.group.local-real=local-real, oauth
+spring.profiles.group.real=real, real-db, oauth
+spring.profiles.group.real1=real1, real-db, oauth
+spring.profiles.group.real2=real2, real-db, oauth
