--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:portfolio1;MODE=MYSQL
 spring.datasource.hikari.username=sa
+spring.jpa.hibernate.ddl-auto=create
 
 #Test OAuth
 
