1108 13시 yml 파일 수정

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,27 @@ branches:
     - master
 
 
+
 before_install:
   - chmod +x gradlew
+
+before_deploy:
+  - zip -r complete *
+  - mkdir -p deploy
+  - mv complete.zip deploy/complete.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+
+    secret_access_key: $AWS_SECRET_KEY
+
+    bucket: gt-webserver-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
 
 # Travis CI 서버의 Home
 
