1108 13시 yml 파일 수정

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ before_deploy:
 
 deploy:
   - provider: s3
-    access_key_id: $AWS_ACCESS_KEY
+    access_key_id: AKIA2Y4K7BDSLX7TWEZK
 
-    secret_access_key: $AWS_SECRET_KEY
+    secret_access_key: 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
 
     bucket: gt-webserver-build
     region: ap-northeast-2
