1108 18시 yml 설정 대폭 변경

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,13 @@ before_install:
   - chmod +x gradlew
 
 before_deploy:
-  - zip -r complete *
-  - mkdir -p deploy
-  - mv complete.zip deploy/complete.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/complete.zip
 
 deploy:
   - provider: s3
