1108 20시 프로젝트 물갈이

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ branches:
 
 
 
-before_install:
-  - chmod +x gradlew
+#before_install:
+#  - chmod +x gradlew
 
 before_deploy:
   - mkdir -p before-deploy
