--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8090
-spring.profiles.include = oauth
+#spring.profiles.include = oauth
 spring.session.store-type=jdbc
 spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
